<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:maxHeight="150dp"
    android:minHeight="100dp"
    android:orientation="horizontal"
    tools:context=".SingleInfoFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvSongName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/Rounded"
        tools:src="@tools:sample/avatars">

    </com.google.android.material.imageview.ShapeableImageView>

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_song_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvArtistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_artist_name"
        app:layout_constraintBottom_toTopOf="@+id/tvAlbumName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvAlbumName" />

    <TextView
        android:id="@+id/tvAlbumName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_album_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvSongName" />
</androidx.constraintlayout.widget.ConstraintLayout>